# tanren

./: .dockerignore  .gitignore  .mcp.json  .rumdl.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  Makefile  README.md  api.env.example  api.test.env  clippy.toml  config.yml  daemon.env.example  deny.toml  docker-compose.test.yml  docker-compose.yml  justfile  lefthook.yml  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tanren.db  tanren.yml  taplo.toml
crates/tanren-api-app/: Cargo.toml
crates/tanren-api-app/src/: assets.rs  config_routes.rs  cookies.rs  departure.rs  errors.rs  invitations.rs  lib.rs  notification_routes.rs  project.rs  project_routes.rs  routes.rs  test_hooks.rs
crates/tanren-app-services/: Cargo.toml  build.rs  clippy.toml
crates/tanren-app-services/src/: account.rs  assets.rs  auth.rs  compose.rs  dispatch_service.rs  error.rs  events.rs  invitations.rs  join.rs  lib.rs  membership_departure.rs  notifications.rs  organization.rs  organization_events.rs  posture.rs  project.rs  project_uninstall.rs  standards.rs  user_configuration.rs
crates/tanren-app-services/tests/: contention_wire.rs  methodology_artifact_contract_docs.rs  methodology_audit_closure.rs  methodology_command_contract.rs  methodology_installer_safety.rs  methodology_issue_provider.rs  methodology_phase_outcome_contract.rs  methodology_remediation.rs  methodology_remediation_findings_and_projection.rs  methodology_remediation_rubric_renderer.rs  methodology_renderer.rs  methodology_spec_status.rs  methodology_standards_runtime.rs  methodology_task_guard_reset.rs
crates/tanren-assessment/: Cargo.toml
crates/tanren-assessment/src/: lib.rs
crates/tanren-bdd/: Cargo.toml
crates/tanren-bdd/src/: lib.rs  main.rs  runner.rs  uninstall_api_smoke.rs  uninstall_mcp_smoke.rs  uninstall_tui_smoke.rs  world.rs
crates/tanren-behavior-proof/: Cargo.toml
crates/tanren-behavior-proof/src/: lib.rs
crates/tanren-cli-app/: Cargo.toml
crates/tanren-cli-app/src/: account.rs  assets.rs  commands.rs  invitation.rs  lib.rs  notifications.rs  org.rs  organization.rs  project.rs  standards.rs
crates/tanren-client-integrations/: Cargo.toml
crates/tanren-client-integrations/src/: lib.rs
crates/tanren-configuration-secrets/: Cargo.toml
crates/tanren-configuration-secrets/src/: lib.rs  notifications.rs  project.rs  standards.rs
crates/tanren-contract/: Cargo.toml
crates/tanren-contract/src/: account.rs  assets.rs  configuration.rs  convert.rs  deployment.rs  enums.rs  error.rs  install.rs  lib.rs  notifications.rs  organization.rs  posture.rs  project.rs  project_input.rs  project_uninstall.rs  request.rs  response.rs  standards.rs
crates/tanren-contract/tests/: error_and_parse_codes.rs  methodology_schema_version_contract.rs  methodology_unknown_fields.rs  serde_roundtrip.rs
crates/tanren-domain/: Cargo.toml
crates/tanren-domain/src/: actor.rs  commands.rs  entity.rs  errors.rs  events.rs  graph.rs  guards.rs  ids.rs  lib.rs  payloads.rs  policy.rs  posture.rs  validated.rs  views.rs
crates/tanren-domain/tests/: envelope_decode.rs  event_value_roundtrip.rs  methodology_event_snapshot_matrix.rs  methodology_events_inline.rs  methodology_events_proptest.proptest-regressions  methodology_events_proptest.rs  methodology_outer_envelope.rs  phase_capability_docs_parity.rs  proptest_status.rs  snapshot_events.rs
crates/tanren-harness/: Cargo.toml
crates/tanren-harness-claude/: Cargo.toml
crates/tanren-harness-claude/src/: lib.rs
crates/tanren-harness-opencode/: Cargo.toml
crates/tanren-harness-opencode/src/: lib.rs
crates/tanren-harness/src/: lib.rs
crates/tanren-identity-policy/: Cargo.toml
crates/tanren-identity-policy/src/: argon2_verifier.rs  ids.rs  lib.rs  org_name.rs  org_permissions.rs  organization.rs  organization_permission.rs  project.rs  project_id.rs  secret_serde.rs  session_token.rs
crates/tanren-mcp-app/: Cargo.toml
crates/tanren-mcp-app/src/: actor.rs  assets.rs  auth.rs  config.rs  lib.rs  project.rs  response.rs  server.rs  support.rs  tools.rs  tools_support.rs  transport.rs
crates/tanren-observability/: Cargo.toml
crates/tanren-observability/src/: internal_error_sink.rs  internal_error_sink_tests.rs  lib.rs
crates/tanren-observation/: Cargo.toml
crates/tanren-observation/src/: lib.rs
crates/tanren-orchestrator/: Cargo.toml
crates/tanren-orchestrator/src/: dispatch.rs  error.rs  lib.rs
crates/tanren-orchestrator/tests/: cancel_auth_lookup.rs  dispatch_concurrency.rs  dispatch_lifecycle.rs  dispatch_policy_audit.rs  dispatch_read_scope.rs  dispatch_unit.rs
crates/tanren-planner/: Cargo.toml
crates/tanren-planner/src/: lib.rs
crates/tanren-policy/: Cargo.toml
crates/tanren-policy/src/: lib.rs
crates/tanren-policy/tests/: policy_engine.rs
crates/tanren-provider-integrations/: Cargo.toml
crates/tanren-provider-integrations/src/: lib.rs
crates/tanren-quality-controls/: Cargo.toml
crates/tanren-quality-controls/src/: lib.rs
crates/tanren-runtime/: Cargo.toml
crates/tanren-runtime-docker/: Cargo.toml
crates/tanren-runtime-docker/src/: lib.rs
crates/tanren-runtime-local/: Cargo.toml
crates/tanren-runtime-local/src/: lib.rs
crates/tanren-runtime/benches/: redaction.rs
crates/tanren-runtime/src/: adapter.rs  capability.rs  conformance.rs  execution.rs  failure.rs  lib.rs  redaction.rs
crates/tanren-runtime/tests/: compile_fail.rs  lane_scope_docs.rs
crates/tanren-scheduler/: Cargo.toml
crates/tanren-scheduler/src/: lib.rs
worker-manager/: .coverage  ADAPTERS.md  Makefile  README.md  pyproject.toml
worker-manager/src/worker_manager/: __main__.py  cli.py  config.py  docs_links.py  errors.py  gate_eval.py  heartbeat.py  ipc.py  log.py  manager.py  roles.py  (+13 more)
worker-manager/tests/: conftest.py
xtask/: Cargo.toml  check-profiles-pending.toml  event-coverage-pending.toml  orphan-traits-allowlist.toml  secret-newtypes.toml  uuid-allowlist.toml
xtask/src/: export_openapi.rs  main.rs
xtask/tests/: regressions.rs
(+1662 files in other folders)
