[project]
name = "tanren-workspace"
version = "0.1.0"
description = "Development lifecycle framework"
requires-python = ">=3.14"

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
tanren-core = { workspace = true }
tanren-cli = { workspace = true }
tanren-api = { workspace = true }
tanren-daemon = { workspace = true }

# ===== RUFF =====
[tool.ruff]
target-version = "py314"
line-length = 100
preview = true
src = ["packages/*/src", "services/*/src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "D",      # pydocstyle
    "DOC",    # pydoclint
    "ANN",    # flake8-annotations
    "FURB",   # refurb
    "PLC",    # pylint convention
]

[tool.ruff.lint.isort]
known-first-party = ["tanren_core", "tanren_cli", "tanren_api", "tanren_daemon"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "DOC"]

# ===== TY =====
[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

# ===== PYTEST =====
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = "-v --tb=short -W error::DeprecationWarning"
markers = [
    "ssh: requires real SSH connection",
    "local_env: requires real local environment",
    "api: API-specific tests",
    "hetzner: requires Hetzner API token and provisions real VMs",
    "gcp: requires GCP credentials and provisions real VMs",
]

# ===== COVERAGE =====
[tool.coverage.run]
source = ["packages", "services"]
omit = ["*/tests/*", "*/__pycache__/*", "*/adapters/hetzner_vm.py", "*/adapters/gcp_vm.py"]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# ===== DEV DEPENDENCIES =====
[dependency-groups]
dev = [
    "tanren-core[gcp]",
    "tanren-core[hetzner]",
    "tanren-cli",
    "tanren-api",
    "tanren-daemon",
    "ruff>=0.14.14, <1",
    "ty>=0.0.1a13, <1",
    "pytest>=8, <9",
    "pytest-asyncio>=1.0, <2",
    "pytest-cov>=6, <7",
    "pytest-timeout>=2, <3",
    "httpx>=0.28.0, <1",
    "respx>=0.22.0, <1",
]
