[project]
name = "tanren-workspace"
version = "0.2.11"
description = "Development lifecycle framework"
requires-python = ">=3.14"
license = "Apache-2.0"

[project.optional-dependencies]
hetzner = ["tanren-core[hetzner]"]
gcp = ["tanren-core[gcp]"]
github = ["tanren-core[github]"]
linear = ["tanren-core[linear]"]
docker = ["tanren-core[docker]"]
all = ["tanren-core[all]"]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
tanren-core = { workspace = true }
tanren-cli = { workspace = true }
tanren-api = { workspace = true }
tanren-daemon = { workspace = true }

# ===== RUFF =====
[tool.ruff]
target-version = "py314"
line-length = 100
preview = true
src = ["packages/*/src", "services/*/src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "D",      # pydocstyle
    "DOC",    # pydoclint
    "ANN",    # flake8-annotations
    "FURB",   # refurb
    "PLC",    # pylint convention
    "S",      # flake8-bandit (security)
    "PT",     # flake8-pytest-style
    "TCH",    # flake8-type-checking
    "TRY",    # tryceratops (exception style)
    "PERF",   # perflint (performance)
    "ARG",    # flake8-unused-arguments
]
extend-ignore = [
    "TRY003",  # long exception messages — would require custom classes for every error
    "TRY301",  # raise in try blocks is needed where except handles cleanup
]

[tool.ruff.lint.isort]
known-first-party = ["tanren_core", "tanren_cli", "tanren_api", "tanren_daemon"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "DOC", "S101", "S108", "S105", "S106", "S324", "S404", "S603", "ARG", "PLC0415", "PLC2701"]
# Pydantic models need field-type imports at runtime (not just TYPE_CHECKING)
"packages/tanren-core/src/tanren_core/schemas.py" = ["TCH"]
"packages/tanren-core/src/tanren_core/adapters/events.py" = ["TCH"]
"packages/tanren-core/src/tanren_core/adapters/types.py" = ["TCH"]
# Store subpackage: Pydantic models, re-exports, event types need runtime imports;
# store methods return typed objects (DOC201); SQL built from safe clauses (S608)
"packages/tanren-core/src/tanren_core/store/**" = ["TCH", "DOC201", "S608"]
# Orchestrator uses Pydantic models and Protocol types at runtime in function signatures
"packages/tanren-core/src/tanren_core/dispatch_orchestrator.py" = ["TCH"]
# Worker uses deferred imports to break circular deps and handle reconstructions
"packages/tanren-core/src/tanren_core/worker.py" = ["TCH", "DOC201", "DOC501", "PLC0415", "SIM105", "S110"]
# FastAPI evaluates type annotations at runtime for DI, validation, and OpenAPI.
# S101 asserts, PLC0415 deferred imports, DOC201/DOC501 docstring issues.
"services/tanren-api/**" = ["TCH", "S101", "PLC0415", "DOC201", "DOC501"]

# ===== TY =====
[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

# ===== PYTEST =====
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = "-v --tb=short -W error::DeprecationWarning"
markers = [
    "ssh: requires real SSH connection",
    "local_env: requires real local environment",
    "api: API-specific tests",
    "hetzner: requires Hetzner API token and provisions real VMs",
    "gcp: requires GCP credentials and provisions real VMs",
    "postgres: requires a real Postgres database",
    "github: requires GitHub token and accesses real GitHub API",
    "linear: requires Linear API token and accesses real Linear API",
    "docker: requires Docker daemon and provisions real containers",
]

# ===== COVERAGE =====
[tool.coverage.run]
source = ["packages", "services"]
omit = ["*/tests/*", "*/__pycache__/*", "*/adapters/hetzner_vm.py", "*/adapters/gcp_vm.py", "*/adapters/github_issue.py", "*/adapters/linear_issue.py", "*/adapters/docker_connection.py", "*/adapters/docker_environment.py", "*/store/postgres.py"]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# ===== DEV DEPENDENCIES =====
[dependency-groups]
dev = [
    "tanren-core[gcp]",
    "tanren-core[github]",
    "tanren-core[hetzner]",
    "tanren-core[linear]",
    "tanren-cli",
    "tanren-api",
    "tanren-daemon",
    "ruff>=0.14.14, <1",
    "ty>=0.0.1a13, <1",
    "pytest>=8, <9",
    "pytest-asyncio>=1.0, <2",
    "pytest-cov>=6, <7",
    "pytest-timeout>=2, <3",
    "httpx>=0.28.0, <1",
    "respx>=0.22.0, <1",
    "import-linter>=2.1, <3",
]

# ===== IMPORT-LINTER =====
[tool.importlinter]
root_packages = ["tanren_core", "tanren_api", "tanren_cli", "tanren_daemon"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Core must not depend on services"
type = "forbidden"
source_modules = ["tanren_core"]
forbidden_modules = ["tanren_api", "tanren_cli", "tanren_daemon"]

[[tool.importlinter.contracts]]
name = "CLI must not depend on API"
type = "forbidden"
source_modules = ["tanren_cli"]
forbidden_modules = ["tanren_api"]

[[tool.importlinter.contracts]]
name = "Daemon must not depend on API or CLI"
type = "forbidden"
source_modules = ["tanren_daemon"]
forbidden_modules = ["tanren_api", "tanren_cli"]

[[tool.importlinter.contracts]]
name = "API must not depend on CLI or Daemon"
type = "forbidden"
source_modules = ["tanren_api"]
forbidden_modules = ["tanren_cli", "tanren_daemon"]
