[project]
name = "worker-manager"
version = "0.1.0"
description = "Host-level worker manager for tanren autonomous orchestration"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2",
]

[project.scripts]
worker-manager = "worker_manager.__main__:main"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30

[tool.ty]
src = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
