[project]
name = "worker-manager"
version = "0.1.0"
description = "Host-level worker manager for tanren autonomous orchestration"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "paramiko>=3.0",
]

[project.optional-dependencies]
hetzner = [
    "hcloud>=2.4.0",
]

[project.scripts]
worker-manager = "worker_manager.__main__:main"
tanren = "worker_manager.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
addopts = "--cov=worker_manager --cov-fail-under=80 --cov-report=term-missing -m 'not ssh and not local_env'"
markers = [
    "ssh: requires real SSH connection to remote VM",
    "local_env: requires real local environment with git, CLIs",
]

[tool.ty.src]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
