[package]
name = "tanren-xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Repo maintenance commands for Tanren. Hosts check-rust-test-surface, check-suppression, and other workspace-wide gates that don't fit a runtime crate."

[lints]
workspace = true

[[bin]]
name = "tanren-xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = "2"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
regex = "1"
