[package]
name = "tanren-app-services"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Command and query handlers shared by every Tanren interface binary (api, cli, mcp, tui, tanrend). Equivalent operations across interfaces resolve to the same handler in this crate."

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tanren-contract = { path = "../tanren-contract" }
tanren-domain = { path = "../tanren-domain" }
tanren-identity-policy = { path = "../tanren-identity-policy" }
tanren-store = { path = "../tanren-store" }
thiserror = { workspace = true }
